--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -21,7 +21,13 @@
         </div>
 
         <div class="row">
+
+           <h2>{{user.name}}</h2>
+            <p>{{user.email}}</p>
+            <h2>{{user.phone}}</h2>
+
             
+
 
 
           
