--- a/public/assets/css/aboutPageStyles.css
+++ b/public/assets/css/aboutPageStyles.css
@@ -15,6 +15,12 @@ body {
     padding-top: 100px;
 }
 
+.tagline {
+    font-family: 'Arimo', sans-serif;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
 /* navbar */
 .container {
     width: 600px;
@@ -53,7 +59,44 @@ body {
 
 /* about card */
 #About {
+   /* MAKE IT GO LEFT */
     margin-top: 30px;
+    animation: fadein 7s;
+    -moz-animation: fadein 7s; /* Firefox */
+    -webkit-animation: fadein 7s; /* Safari and Chrome */
+    -o-animation: fadein 7s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .card-header {
@@ -63,14 +106,54 @@ body {
     font-size: 16px;
 }
 
+.card-block {
+    background-color: #e3f2fd;
+}
+
 .card-text {
     padding: 15px;
+    font-family: 'Arimo', sans-serif;     
 }
 
 /* about image */
-
 #help {
     margin-top: 15px;
+    animation: fadein 5s;
+    -moz-animation: fadein 5s; /* Firefox */
+    -webkit-animation: fadein 5s; /* Safari and Chrome */
+    -o-animation: fadein 5s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 /* footer */
