--- a/public/assets/css/searchPageStyles.css
+++ b/public/assets/css/searchPageStyles.css
@@ -15,6 +15,12 @@ body {
     padding-top: 100px;
 }
 
+.tagline {
+    font-family: 'Arimo', sans-serif;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
 /* navbar */
 .container {
     width: 600px;
