--- a/public/assets/css/userPageStyles.css
+++ b/public/assets/css/userPageStyles.css
@@ -14,6 +14,12 @@ body, html {
     padding-top: 100px;
 }
 
+.tagline {
+    font-family: 'Arimo', sans-serif;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
 /* navbar */
 
 .container {
@@ -55,7 +61,7 @@ body, html {
 #welcomePanel {
     width: 700px;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
     background-color: #eeeeee;
     border-radius: 15px;
 }
@@ -295,6 +301,7 @@ footer {
     width: 100%;
     background-color: #E18942;
 }
+
 #footImg {
     vertical-align: middle;
 }
