--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,17 +6,86 @@
     <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <!-- load fontawesome -->
-    <style>
+       <style>
         body {
-            padding-top: 80px;
+            padding-top: 200px;
+        }
+
+        #loginPanel {
+            background-color: #e3f2fd;
+            border-radius: 5px;
+            font-family: 'Arimo', sans-serif;
+            animation: fadein 2s;
+            -moz-animation: fadein 2s;
+            /* Firefox */
+            -webkit-animation: fadein 2s;
+            /* Safari and Chrome */
+            -o-animation: fadein 2s;
+            /* Opera */
+        }
+
+        @keyframes fadein {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-moz-keyframes fadein {
+            /* Firefox */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-webkit-keyframes fadein {
+            /* Safari and Chrome */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-o-keyframes fadein {
+            /* Opera */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        #loginPanelBody {
+            margin: 0 auto;
+        }
+
+        #loginSubmitBtn {
+            background-color: #E18942;
+        }
+
+        p, a, label {
+            font-weight: bold;
+            font-size: 16px;
+        }
+
+        a {
+            color:#E18942;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
+ <div class="card" id="loginPanel">
 
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="card-body" id="loginPanelBody">
 
             <h1><span class="fa fa-sign-in"></span>Login</h1>
 
@@ -33,7 +102,7 @@
                     <input type="password" class="form-control" name="password">
                 </div>
 
-                <button type="submit" class="btn btn-warning btn-lg">Login</button>
+                <button type="submit" class="btn btn-warning btn-lg" id="loginSubmitBtn">Login</button>
             </form>
 
             <hr>
