--- a/views/searchProject.handlebars
+++ b/views/searchProject.handlebars
@@ -1,4 +1,6 @@
-<div class="container-fluid"></div>
+<div class="container-fluid">
+    <h2 class="tagline">Let's accomplish more together</h2>
+</div>
 
 <!--navbar-->
 <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
