--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,38 +9,126 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <!-- load fontawesome -->
     <style>
-        body {
-            padding-top: 80px;
+    body {
+            padding-top: 200px;
         }
+
+        #signupPanel {
+            background-color: #e3f2fd;
+            border-radius: 5px;
+            font-family: 'Arimo', sans-serif;
+            animation: fadein 2s;
+            -moz-animation: fadein 2s;
+            /* Firefox */
+            -webkit-animation: fadein 2s;
+            /* Safari and Chrome */
+            -o-animation: fadein 2s;
+            /* Opera */
+        }
+
+        @keyframes fadein {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-moz-keyframes fadein {
+            /* Firefox */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-webkit-keyframes fadein {
+            /* Safari and Chrome */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @-o-keyframes fadein {
+            /* Opera */
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+    #signupPanelBody {
+        margin: 0 auto;
+    }
+
+    #signupSubmitBtn {
+        background-color: #E18942;
+    }
+
+    p,
+    a,
+    label {
+        font-weight: bold;
+        font-size: 16px;
+    }
+
+    a {
+        color: #E18942;
+    }
     </style>
 </head>
 
 <body>
-    <div class="container">
 
-        <div class="col-sm-6 col-sm-offset-3">
+    <div class="card" id="signupPanel">
 
-            <h1><span class="fa fa-sign-in"></span> Signup</h1>
+        <div class="card-body" id="signupPanelBody">
+
+            <h1><span class="fa fa-sign-in"></span> Sign Up</h1>
 
             <!-- show any messages that come back with authentication -->
 
-            <div class="alert alert-danger">
+            <div class="alert alert-danger"></div>
 
-            </div>
+
 
 
             <!-- LOGIN FORM -->
             <form action="/signup" method="post">
                 <div class="form-group">
+
+                        <div class="form-group">
+                            <label>Full Name</label>
+                            <input type="text" class="form-control" name="name">
+                        </div>
+
+         
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input type="text" class="form-control" name="phone">
+                    </div>
+
+                <div class="form-group">
                     <label>Email</label>
                     <input type="text" class="form-control" name="email">
                 </div>
+                <br/>
                 <div class="form-group">
                     <label>Password</label>
                     <input type="password" class="form-control" name="password">
                 </div>
+                <br/>
+         
 
-                <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+                <button type="submit" class="btn btn-warning btn-lg" id="signupSubmitBtn">Sign Up</button>
             </form>
 
             <hr>
