--- a/public/assets/css/userPageStyles.css
+++ b/public/assets/css/userPageStyles.css
@@ -1,12 +1,21 @@
-body, html {
+.imageDiv {
     height: 100%;
-    margin: 0;
+    margin: 0 auto;
        /* The image used */
        background-image: url("../images/foggymountains.jpg");
        /* Center and scale the image nicely */
        background-position: center;
        background-repeat: no-repeat;
+       /* background-repeat: repeat-x; */
        background-size: cover;
+       -webkit-background-size: cover; 
+       -moz-background-size: cover; 
+}
+
+body, html {
+    height: 100%;
+    margin: 0 auto;
+      background-color: #e3f2fd;
 }
 
 .container-fluid {
@@ -21,7 +30,6 @@ body, html {
 }
 
 /* navbar */
-
 .container {
     width: 600px;
     margin-left: 0;
@@ -54,16 +62,19 @@ body, html {
     position: absolute;
     right: 40px;
     background: #E18942;
-    color: #e3f2fd;     
+    color: #e3f2fd;
+    font-family: 'Arimo', sans-serif;     
 }
 
 /* welcome panel */
 #welcomePanel {
     width: 700px;
+    margin: 0 auto;
     margin-top: 100px;
     margin-bottom: 150px;
     background-color: #eeeeee;
     border-radius: 15px;
+    font-family: 'Arimo', sans-serif;     
 }
 
 #welcomePanelBody {
@@ -87,6 +98,10 @@ body, html {
     
 }
 
+#welcomePanelBtnGroup {
+    text-align: center;
+}
+
 #createProjectBtn {
     display: inline-block;
     width: 175px;
@@ -103,8 +118,8 @@ body, html {
     font-family: 'Arimo', sans-serif;     
 }
 
-#projectSearchInput {
-    width: 200px;
+#projectSearchBtn {
+    width: 175px;
     margin-top: 20px;
     margin-right: 40px;
     text-align: center;
@@ -155,10 +170,6 @@ body, html {
     margin-left: 40px;
     color: #424242;
     font-size: 18px;
-}
-
-.input-group-prepend {
-    margin-left: 40px;
 }
 
 #projectName {
@@ -258,9 +269,12 @@ body, html {
 }
 
 /* user's projects list */
-.card {
+#usersProjectListPanel {
     width: 700px;
+    height: 100%;
     margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 200px;
     font-family: 'Arimo', sans-serif;     
 }
 
@@ -278,6 +292,21 @@ body, html {
     font-family: 'Arimo', sans-serif;     
 }
 
+#projectListHeadersInList {
+    display: inline-block;
+    text-align: center;
+    font-family: 'Arimo', sans-serif;
+    font-weight: bold;    
+}
+
+#projectListH3 {
+    display: inline-block;
+    padding-left: 70px;
+    padding-right: 70px;
+    font-weight: bold;    
+    font-family: 'Arimo', sans-serif;    
+}
+
 .projectNameInList {
     display: inline-block;
     width: 260px;
@@ -292,6 +321,16 @@ body, html {
     color: #424242;
     font-family: 'Arimo', sans-serif; 
 }
+
+h5 {
+    display: inline-block;
+    padding-left: 60px;
+    padding-right: 60px;
+    font-family: 'Arimo', sans-serif;
+    text-align: center;
+}
+
+
 
 /* footer */
 footer {
