--- a/views/searchProject.handlebars
+++ b/views/searchProject.handlebars
@@ -2,11 +2,11 @@
     <h2 class="tagline">Let's accomplish more together</h2>
 </div>
 
-<!--navbar-->
+{{!-- navbar --}}
 <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
     <div class="container">
-        <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinMe</a>
-        <a class="nav-link" href="/index">Home</a>
+        <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
+        <a class="nav-link" href="/user">Home</a>
         <a class="nav-link" href="../public/about.html">About</a>
         <a class="nav-link disabled" id="activeNavLink" href="#">Search Projects</a>
         <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
@@ -15,7 +15,7 @@
 
 {{!-- UNTESTED HANDLEBARS --}} {{!-- user projects list --}}
 <div class="card">
-    <div class="card-header" id="projectListPanelHeader">All JoinMe Projects</div>
+    <div class="card-header" id="projectListPanelHeader">All JoinME Projects</div>
     <div class="card-body" id="projectListPanelBody">
         <ul class="list-group">
             {{#each Project}}
@@ -30,7 +30,7 @@
 </div>
 
 
-<!--footer-->
+{{!-- footer --}}
 <footer class="fixed-bottom">
     <div class="mx-auto" id="footImg" style="width: 100px;">
         <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
