--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -5,26 +5,37 @@
 <!--navbar-->
 <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
     <div class="container">
-        <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinMe</a>
-        <a class="nav-link" href="/index">Home</a>
+        <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
+        <a class="nav-link" href="/user">Home</a>
         <a class="nav-link" href="../public/about.html">About</a>
         <a class="nav-link" href="/searchProject">Search Projects</a>
         <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
     </div>
 </nav>
 
-{{!-- user projects table --}}
-<div class="card">
-    <div class="card-header">{{Project.Project_Name}}</div>
 
-    <table style="width:100%">
-        <tr>
-            {{#each Step.Step}}
-            <th>{{this.Step}}</th>
-            <th>{{this.Step_description}}</th>
-            <th>{{this.Completed}}</th>
-            {{/each}}
-        </tr>
+<div class="card" id="projectPanel">
+    <div class="card-header" id="projectPanelHeader">Emma's project{{Project.Project_Name}}</div>
+    <table class="projectPanelTable" border="1">
+        <tbody class="projectPanelTableBody">
+            <tr>
+                {{#each Step.Step}}
+                <th class="projectTableHeaders">Step One{{this.Step}}</th>
+                <th class="projectTableHeaders">Step one description here{{this.Step_description}}</th>
+                <th class="projectTableHeaders">Completed{{this.Completed}}</th>
+                {{/each}}
+            </tr>
+            <tr>
+                <th class="projectTableHeaders">Step Two</th>
+                <th class="projectTableHeaders">Step two description is kind of long but that's ok becuase this table header will adjust size</th>
+                <th class="projectTableHeaders">Incomplete</th>
+            </tr>
+            <tr>
+                <th class="projectTableHeaders">Step Three</th>
+                <th class="projectTableHeaders">Step three description here</th>
+                <th class="projectTableHeaders">Incomplete</th>
+            </tr>
+        </tbody>
     </table>
 </div>
 
