--- a/views/searchProject.handlebars
+++ b/views/searchProject.handlebars
@@ -1,38 +1,45 @@
-<div class="container-fluid">
-    <h2 class="tagline">Let's accomplish more together</h2>
+<div class="searchProjectPageBodyContainer">
+
+    <div class="container-fluid">
+        <h2 class="tagline">Let's accomplish more together</h2>
+    </div>
+
+    {{!-- navbar --}}
+    <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
+        <div class="container">
+            <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
+            <a class="nav-link" href="/user">Home</a>
+            <a class="nav-link" href="../public/about.html">About</a>
+            <a class="nav-link disabled" id="activeNavLink" href="#">Search Projects</a>
+            <a class="btn btn-default navbar-btn" id="btnSignOut" href="/login">Sign Out</a>
+        </div>
+    </nav>
+
+    <div class="instructionsForJoin">
+        <h3>Click the JoinME<span><img src="assets/images/step4sm.jpg" class="img-fluid" id="joinmeBtnInstructions" alt="Sample photo">
+    </span>button to join a project!</h3>
+    </div>
+
+    {{!-- user projects list --}}
+    <div class="card" id="allProjectsPanel">
+        <div class="card-header" id="allProjectsPanelHeader">All JoinME Projects</div>
+        <div class="card-body" id="allProjectsListPanelBody">
+            <ul class="list-group">
+                <li class="list-group-item" id="projectNameItem">
+                    <p class="projectNameInAllList">Justin's Dummy Project</p>
+                    <p class="projectDescriptionInAllList">This is Justin's super cool project about some of his personal goals that he would like to track through
+                        this super cool app.</p>
+                    <a class="btn btn-circle mr-3"><img src="./assets/images/step4sm.jpg"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    {{!-- footer --}}
+    <footer class="fixed-bottom">
+        <div class="mx-auto" id="footImg" style="width: 100px;">
+            <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
+        </div>
+    </footer>
+
 </div>
-
-{{!-- navbar --}}
-<nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
-    <div class="container">
-        <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
-        <a class="nav-link" href="/user">Home</a>
-        <a class="nav-link" href="../public/about.html">About</a>
-        <a class="nav-link disabled" id="activeNavLink" href="#">Search Projects</a>
-        <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
-    </div>
-</nav>
-
-{{!-- UNTESTED HANDLEBARS --}} {{!-- user projects list --}}
-<div class="card">
-    <div class="card-header" id="projectListPanelHeader">All JoinME Projects</div>
-    <div class="card-body" id="projectListPanelBody">
-        <ul class="list-group">
-            {{#each Project}}
-            <li class="list-group-item" id="projectNameItem">
-                <a class="projectNameInList" href="./project.handlebars">{{this.Project_name}}</a>
-                <h5 class="projectStartDate">{{this.Datetime}}</h5>
-            </li>
-            {{/each}}
-        </ul>
-        <a class="projectNameInList" href="/api/projects">{{this.Project_name}}Testing the link for handlebars insertion. This will be deleted.</a>
-    </div>
-</div>
-
-
-{{!-- footer --}}
-<footer class="fixed-bottom">
-    <div class="mx-auto" id="footImg" style="width: 100px;">
-        <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
-    </div>
-</footer>
