--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -7,8 +7,8 @@
     <!--navbar-->
     <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
         <div class="container">
-            <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
-            <a class="nav-link" href="/user">Home</a>
+            <a class="nav-link" id="joinmeNavLink" href="/">JoinME</a>
+            <a class="nav-link" href="/index">Home</a>
             <a class="nav-link" href="../public/about.html">About</a>
             <a class="nav-link" href="/searchProject">Search Projects</a>
             <a class="btn btn-default navbar-btn" id="btnSignOut" href="/login">Sign Out</a>
